add portfolio responsive

--- a/portfolio.html
+++ b/portfolio.html
@@ -182,9 +182,30 @@
               <a class="portfolio__link link" href="./portfolio.html">
                 <div class="portfolio__thumb">
                   <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/p1-min.jpg    1x,
+                        ./images/portfolio/p1-2x-min.jpg 2x
+                      "
+                      media="(max-width: 450px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/p1-354-min.jpg    1x,
+                        ./images/portfolio/p1-354-2x-min.jpg 2x
+                      "
+                      media="(min-width: 768px) and (max-width: 1199px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/p1-370-min.jpg    1x,
+                        ./images/portfolio/p1-370-2x-min.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
                     <img
                       class="img"
-                      src="./images/portfolio/img1.jpg"
+                      src="./images/portfolio/p1-min.jpg"
                       alt="Ноутбук с сайтом"
                       width="450"
                     />
@@ -208,9 +229,30 @@
               <a class="portfolio__link link" href="./portfolio.html">
                 <div class="portfolio__thumb">
                   <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/p2-min.jpg    1x,
+                        ./images/portfolio/p2-2x-min.jpg 2x
+                      "
+                      media="(max-width: 450px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/p2-354-min.jpg    1x,
+                        ./images/portfolio/p2-354-2x-min.jpg 2x
+                      "
+                      media="(min-width: 768px) and (max-width: 1199px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/p2-370-min.jpg    1x,
+                        ./images/portfolio/p2-370-2x-min.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
                     <img
                       class="img"
-                      src="./images/portfolio/img2.jpg"
+                      src="./images/portfolio/p2-min.jpg"
                       alt="Баскетболисты играют в баскетбол"
                       width="450"
                     />
@@ -236,9 +278,30 @@
               <a class="portfolio__link link" href="./portfolio.html">
                 <div class="portfolio__thumb">
                   <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/p3-min.jpg    1x,
+                        ./images/portfolio/p3-2x-min.jpg 2x
+                      "
+                      media="(max-width: 450px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/p3-354-min.jpg    1x,
+                        ./images/portfolio/p3-354-2x-min.jpg 2x
+                      "
+                      media="(min-width: 768px) and (max-width: 1199px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/p3-370-min.jpg    1x,
+                        ./images/portfolio/p3-370-2x-min.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
                     <img
                       class="img"
-                      src="./images/portfolio/img3.jpg"
+                      src="./images/portfolio/p3-min.jpg"
                       alt="Рыба"
                       width="450"
                     />
@@ -264,9 +327,30 @@
               <a class="portfolio__link link" href="./portfolio.html">
                 <div class="portfolio__thumb">
                   <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/p4-min.jpg    1x,
+                        ./images/portfolio/p4-2x-min.jpg 2x
+                      "
+                      media="(max-width: 450px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/p4-354-min.jpg    1x,
+                        ./images/portfolio/p4-354-2x-min.jpg 2x
+                      "
+                      media="(min-width: 768px) and (max-width: 1199px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/p4-370-min.jpg    1x,
+                        ./images/portfolio/p4-370-2x-min.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
                     <img
                       class="img"
-                      src="./images/portfolio/img4.jpg"
+                      src="./images/portfolio/p4-min.jpg"
                       alt="Наушники"
                       width="450"
                     />
@@ -292,9 +376,30 @@
               <a class="portfolio__link link" href="./portfolio.html">
                 <div class="portfolio__thumb">
                   <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/p5-min.jpg    1x,
+                        ./images/portfolio/p5-2x-min.jpg 2x
+                      "
+                      media="(max-width: 450px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/p5-354-min.jpg    1x,
+                        ./images/portfolio/p5-354-2x-min.jpg 2x
+                      "
+                      media="(min-width: 768px) and (max-width: 1199px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/p5-370-min.jpg    1x,
+                        ./images/portfolio/p5-370-2x-min.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
                     <img
                       class="img"
-                      src="./images/portfolio/img5.jpg"
+                      src="./images/portfolio/p5-min.jpg"
                       alt="Коробки"
                       width="450"
                     />
@@ -320,9 +425,30 @@
               <a class="portfolio__link link" href="./portfolio.html">
                 <div class="portfolio__thumb">
                   <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/p6-min.jpg    1x,
+                        ./images/portfolio/p6-2x-min.jpg 2x
+                      "
+                      media="(max-width: 450px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/p6-354-min.jpg    1x,
+                        ./images/portfolio/p6-354-2x-min.jpg 2x
+                      "
+                      media="(min-width: 768px) and (max-width: 1199px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/p6-370-min.jpg    1x,
+                        ./images/portfolio/p6-370-2x-min.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
                     <img
                       class="img"
-                      src="./images/portfolio/img6.jpg"
+                      src="./images/portfolio/p6-min.jpg"
                       alt="Дисплей"
                       width="450"
                     />
@@ -348,9 +474,30 @@
               <a class="portfolio__link link" href="./portfolio.html">
                 <div class="portfolio__thumb">
                   <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/p7-min.jpg    1x,
+                        ./images/portfolio/p7-2x-min.jpg 2x
+                      "
+                      media="(max-width: 450px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/p7-354-min.jpg    1x,
+                        ./images/portfolio/p7-354-2x-min.jpg 2x
+                      "
+                      media="(min-width: 768px) and (max-width: 1199px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/p7-370-min.jpg    1x,
+                        ./images/portfolio/p7-370-2x-min.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
                     <img
                       class="img"
-                      src="./images/portfolio/img7.jpg"
+                      src="./images/portfolio/p7-min.jpg"
                       alt="Книга"
                       width="450"
                     />
@@ -376,9 +523,30 @@
               <a class="portfolio__link link" href="./portfolio.html">
                 <div class="portfolio__thumb">
                   <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/p8-min.jpg    1x,
+                        ./images/portfolio/p8-2x-min.jpg 2x
+                      "
+                      media="(max-width: 450px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/p8-354-min.jpg    1x,
+                        ./images/portfolio/p8-354-2x-min.jpg 2x
+                      "
+                      media="(min-width: 768px) and (max-width: 1199px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/p8-370-min.jpg    1x,
+                        ./images/portfolio/p8-370-2x-min.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
                     <img
                       class="img"
-                      src="./images/portfolio/img8.jpg"
+                      src="./images/portfolio/p8-min.jpg"
                       alt="Бирка"
                       width="450"
                     />
@@ -404,9 +572,30 @@
               <a class="portfolio__link link" href="./portfolio.html">
                 <div class="portfolio__thumb">
                   <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/p9-min.jpg    1x,
+                        ./images/portfolio/p9-2x-min.jpg 2x
+                      "
+                      media="(max-width: 450px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/p9-354-min.jpg    1x,
+                        ./images/portfolio/p9-354-2x-min.jpg 2x
+                      "
+                      media="(min-width: 768px) and (max-width: 1199px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/p9-370-min.jpg    1x,
+                        ./images/portfolio/p9-370-2x-min.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
                     <img
                       class="img"
-                      src="./images/portfolio/img9.jpg"
+                      src="./images/portfolio/p9-min.jpg"
                       alt="Ноутбук"
                       width="450"
                     />
